--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,15 +4,7 @@
   </h1>
   <nav class='right'>
     <ul>
-      <li>
-        Home
-      </li>
-      <li>
-        <a href='/'>Feedback</a>
-      </li>
-      <li class='no_right'>
-        <a href='/'>About</a>
-      </li>
+      <%= raw top_menu %>
     </ul>
   </nav>
 </header>
