--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,8 +25,8 @@
   <section id='features'>
     <article class='clearfix' id="what">
       <section class='left'>
-        <h2>What is iSafePlayer?</h2>
-        <p><strong>iSafePlayer</strong> is a <strong>anti-theft</strong> music player, which could play the music in your iPhone and alarm when your iPhone lose connection to you.</p>
+        <h2>What is iSafePlayer ?</h2>
+        <p><strong>iSafePlayer</strong> is an <strong>anti-theft</strong> music player, which could play those music already in your iPhone and will alarm when your iPhone lose connection with you, like headset been removed, or bluetooth headset lost connection.</p>
       </section>
       <aside class='right'>
         <img alt='Accessible' height='110' src='http://www.iawriter.com/wp-content/themes/Writer%201.0.4/assets/img/how_7.jpg' width='250' />
@@ -36,7 +36,7 @@
 
     <article class='clearfix' id="how">
       <section class='left'>
-        <h2>How can iSafePlayer protect your iPhone been stolen?</h2>
+        <h2>How does iSafePlayer work ?</h2>
         <p>
           <h3>If You</h3>
           <ul>
@@ -44,10 +44,10 @@
               are using iSafePlayer to listen to music.
             </li>
             <li>
-              are using earplug or bluetooth headset.
+              are using wired headset or bluetooth headset.
             </li>
           </ul>
-          <h3>When thief</h3>
+          <h3>When a thief</h3>
           <ul>
             <li>
               unplugs headset.
@@ -59,13 +59,13 @@
           <h3>iSafePlayer will</h3>
           <ul>
             <li>
-              start to alarm at maximum sound.
+              start to alarm at the maximum volume.
             </li>
             <li>
               vibrate your iPhone.
             </li>
             <li>
-              play your custom recorded alarm sound, which is most sensitive to you, like your name, or which could threaten the thief, like "I am thief, I am stealing iPhone".
+              play your custom recorded alarm sound, which is very sensitive to you, like your name, or can threaten the thief, like "I am a thief, I am stealing iPhone".
             </li>
             <li>
               not be able to lower down the speaker volume.
@@ -87,36 +87,32 @@
         <p>
           <h3>It's practical</h3>
           <ul>
-            <li>
-              Most situations that we lost iPhone is on <strong>bus</strong> or <strong>metro</strong> or at <strong>crowded street</strong> or <strong>crowded public places</strong>
-            </li>
-            <li>
-              Most of people like listen to music with iPhone by using ipod player, when they are walking or on the bus or metro.
-            </li>
+            <li>Most of situations that we lost iPhone are on <strong>bus</strong>, <strong>metro</strong>, <strong>crowded street</strong> or <strong>crowded public places</strong></li>
+            <li>Most of people like listening to music with iPhone by using ipod player, when they are outside.</li>
           </ul>
 
-          <h3>The disadvantage of other anti-theft applications</h3>
+          <h3>It solved the disadvantages of other anti-theft applications</h3>
           <ul>
             <li>
-              <strong>You need to remember to launch it</strong>, but most situation is we are not careful enough, so we forgot doing it. <br/>
-              <strong>For iSafePlayer</strong>, you will never need to remember to open it, because you want to listen music, so it's a inevitable step when you go out.
+              <strong>You have to remember to launch it</strong>, but most of the situation, we are not careful enough, so we always forget to do it. <br/>
+              <p><strong>For iSafePlayer</strong>, you will never need to remember to open it, because you want to listen to the music, so it's an inevitable step when you go out.</p>
             </li>
             <li>
-              <strong>If you launched that app you can't do anything. </strong>
-                You can't lock the screen, you can't listen music, you can't view browser, you can't play game. But it's what to stop you to launch it. <br/>
-              <strong>For iSafePlayer</strong>, you can do anything as long as you still can here music from iSafePlayer, whatever your locked the screen, or playing game or browsing websites.
+              <strong>If you launched that application you couldn't do anything. </strong>
+              You can't lock the screen, you can't listen to music, you can't browse website, you can't play game. the alarm will be disabled if you launch any other application. <br/>
+              <p><strong>For iSafePlayer</strong>, allow you do anything as long as you can still hear the music from iSafePlayer, whatever you are playing game or browsing website or even locked screen.</p>
             </li>
             <li>
-              <strong>Easy to disalarm. </strong><br/>Most of them, you can disalarm them by press home button, or lock the screen. <br/>
-              <strong>For iSafePlayer</strong>, if you set passcode, the thief not only can't unlock your iPhone to kill the process but also can't lower down the alarm sound. The only way is turning off the iPhone by force, but do you think a thief can be so calm when alarm been raise and hold the power button for seconds? before he try, he must choose run away.
+              <strong>Easy to disable alarm. </strong><br/>Most of them, you can disable alarm them by press home button, or lock the screen. <br/>
+              <p><strong>For iSafePlayer</strong>, if you set passcode, the thief not only can't unlock your iPhone to kill the application but also can't lower down the alarm sound. The only way is turning off the iPhone by force, but do you think a thief can be so calm when the alarm been raised and holds the power button for seconds? before he trys, he must choose to run away.</p>
             </li>
             <li>
-              There are two kinds of anti-theft application: <br/>
-                <strong>1. When you are losing your iPhone.</strong><br/>
-                This kind of tool will alarm when thief touched or moved your iPhone. You can get it back very soon and possible to get it back.<br/>
+              There are two kinds of situations that anti-theft application are trying to handle with: <br/>
+                <strong>1. When your iPhone is being stolen.</strong><br/>
+                This kind of application will alarm when the thief touches or moves your iPhone. You can get it back very soon and are possible to get it back.<br/>
                 <strong>2. When you lost your iPhone.</strong><br/>
-                This kind of tool will allow you to trace your iPhone's information, but most of them are jailborken application. It's very hard to get your iPhone back also very complicated.<br/>
-              <strong>For iSafePlayer</strong>, it's the type 1, it tends to stop your iPhone been stolen as earlier as possible.
+                This kind of application will help you to trace your iPhone's information, but most of them are jailborken applications. It's very hard to get your iPhone back and also very complicated.<br/>
+              <p><strong>For iSafePlayer</strong>, it's the type 1, it tends to stop your iPhone being stolen as earlier as possible.</p>
             </li>
           </ul>
         </p>
