--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,7 +18,7 @@
         <p><strong>iSafePlayer</strong> is an <strong>anti-theft</strong> music player, which could play those music already in your iPhone and will alarm when your iPhone lose connection with you, like headset been removed, or bluetooth headset lost connection.</p>
       </section>
       <aside class='right'>
-        <img alt='Accessible' height='110' src='http://www.iawriter.com/wp-content/themes/Writer%201.0.4/assets/img/how_7.jpg' width='250' />
+        <img alt='cover' height='' src='/assets/cover.jpg' width='250' />
       </aside>
     </article>
 
@@ -66,7 +66,7 @@
         </p>
       </section>
       <aside class='right'>
-        <img alt='Simple' height='' src='http://www.iawriter.com/wp-content/themes/Writer%201.0.4/assets/img/how_7.jpg' width='250' />
+        <img alt='iSafePlayer tutorial' height='' src='/assets/tutorial-1.jpg' width='250' />
       </aside>
     </article>
 
@@ -107,7 +107,11 @@
         </p>
       </section>
       <aside class='right'>
-        <img alt='Integrated' height='' src='http://www.iawriter.com/wp-content/themes/Writer%201.0.4/assets/img/how_7.jpg' width='250' />
+        <img alt='iSafePlayer tutorial' height='' src='/assets/tutorial-2.jpg' width='250' />
+        <br/>
+        <img alt='iSafePlayer tutorial' height='' src='/assets/tutorial-3.jpg' width='250' />
+        <br/>
+        <img alt='iSafePlayer tutorial' height='' src='/assets/tutorial-4.jpg' width='250' />
       </aside>
     </article>
   </section>
