--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
   <%= csrf_meta_tags %>
 
   <!--[if IE]>
-    <%= javascript_include_tag "html5" %>
-    <%= stylesheet_link_tag    "iefix" %>
+    <%#= javascript_include_tag "html5/html5" %>
+    <%#= stylesheet_link_tag    "iefix/iefix" %>
   <![endif]-->
 
   <%= render "shared/ga" %>
