--- a/app/views/home/index.en.html.erb
+++ b/app/views/home/index.en.html.erb
@@ -1,12 +1,12 @@
 <div class='container' id='application'>
   <section id="video">
     <a href="javascript:void(0)" id="show_video"><%= image_tag "preview.jpg" %></a>
-    <%= t "video_html" %>
+    <ifrae class='video_code' style='display:none' src='http://player.vimeo.com/video/30184897?title=0&amp;byline=0&amp;portrait=0' width='820' height='462' frameborder='0' webkitAllowFullScreen allowFullScreen></iframe>
   </section>
 
   <section id='download'>
     <p>
-      <a href='#'><%= image_tag "app-store.png", :alt => "Get iSafePlayer on the AppStore", :width => 200 %></a>
+      <a href='http://itunes.apple.com/us/app/isafeplayer/id471335004?ls=1&mt=8'><%= image_tag "app-store.png", :alt => "Get iSafePlayer on the AppStore", :width => 200 %></a>
       <small>Requires iPhone, iPod 4.0 +</small>
     </p>
   </section>
@@ -119,7 +119,7 @@
   <section id='footer_download'>
     <h2>Where can I get it ?</h2>
     <p>
-      <a href='#'><%= image_tag "app-store.png", :width => 200 %></a>
+      <a href='http://itunes.apple.com/us/app/isafeplayer/id471335004?ls=1&mt=8'><%= image_tag "app-store.png", :width => 200 %></a>
       <small>Requires iPhone, iPod 4.0 +</small>
     </p>
   </section>
