--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -9,7 +9,7 @@
 
   <ul class='right'>
     <li class='reset_all'>
-      <a href='http://www.twitter.com/isafeplayer'>Twitter</a>
+      <a href='http://www.twitter.com/hlxwell'>Twitter</a>
     </li>
   </ul>
 </footer>
