fix title translation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title><%= t "footertitle" %></title>
+  <title><%= t "title" %></title>
   <meta content='iSafePlayer, iphone, app, anti-theft, player' name='keywords' />
   <meta content='iSafePlayer anti-theft player.' name='description' />
   <link rel="shortcut icon" href="/assets/favicon.ico">
