--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,6 +1,6 @@
 <div class='container' id='feedback'>
   <section>
-    <h2>Any feedback could import iSafePlayer do better ?</h2>
+    <h2><%= t ".new_feedback_title" %></h2>
     <p class="feedback_form">
       <%= render 'form' %>
     </p>
