--- a/app/views/home/index.en.html.erb
+++ b/app/views/home/index.en.html.erb
@@ -66,6 +66,8 @@
         </p>
       </section>
       <aside class='right'>
+        <%= image_tag "player.jpg", :width => 250 %>
+        <br/>
         <%= image_tag "tutorial-1.jpg", :width => 250 %>
       </aside>
     </article>
