--- a/app/assets/stylesheets/feedbacks.css.scss
+++ b/app/assets/stylesheets/feedbacks.css.scss
@@ -3,12 +3,42 @@
     text-align: center;
   }
 
+  div#error_explanation {
+    width: 490px;
+    margin: 0 auto 20px auto;
+    padding: 10px;
+    font-size: 16px;
+    background-color: #fef;
+    border: 1px solid #ede;
+
+    ul {
+      margin-top: 10px;
+    }
+    ul li {
+      line-height: 24px;
+      list-style: disc;
+      margin: 0 0 0px 20px;
+      text-align: justify;
+    }
+  }
+
+  div.notice {
+    width: 512px;
+    margin: 0 auto 20px auto;
+    padding: 10px;
+    font-size: 16px;
+    background-color: #fef;
+    border: 1px solid #ede;
+  }
+
   div.feedback_item {
     width: 512px;
     margin: 0 auto 20px auto;
-  
+    padding: 10px;
+    border: 1px solid #ede;
+
     div.title {
-      margin-bottom: 5px;
+      margin-bottom: 10px;
     }
   }
 
