--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -1,18 +1,16 @@
 <div class='container' id='feedback'>
   <section>
     <p>
-      <h2>User Feedback</h2>
-
+      <h2><%= t ".user_feedback" %></h2>
+      <%= show_notice_flash %>
       <% @feedbacks.each do |feedback| %>
         <div class="feedback_item">
           <div class="title"><b><%= feedback.name %></b> <small><%= feedback.created_at.to_s(:db) %></small></div>
           <div><%= feedback.content %></div>
         </div>
       <% end %>
-
       <%= paginate @feedbacks %>
-
-      <div class="new_feedback"><%= link_to 'Have some cool idea?', new_feedback_path %></div>
+      <div class="new_feedback"><%= link_to t('.have_idea'), new_feedback_path %></div>
     </p>
   </section>
 </div>
