--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -108,5 +108,11 @@ $right-width: 250px;
   color: #034;
 }
 
+#application #title {
+text-align: center;
+  width: 100%;
+  margin-bottom: 50px;
+  font-size: 30px;
+}
 
 /* ------------------------------------------- */
