--- a/app/views/home/index.en.html.erb
+++ b/app/views/home/index.en.html.erb
@@ -11,10 +11,14 @@
     </p>
   </section>
 
+  <section id="title">
+    <h1>"The most practical and useful anti-theft iPhone application I have ever used."</h1>
+  </section>
+
   <section id='features'>
     <article class='clearfix' id="what">
       <section class='left'>
-        <h2>What is iSafePlayer ?</h2>
+        <h2>What is the iSafePlayer ?</h2>
         <p><strong>iSafePlayer</strong> is an <strong>anti-theft</strong> music player, which could play those music already in your iPhone and will alarm when your iPhone lose connection with you, like headset been removed, or bluetooth headset lost connection.</p>
       </section>
       <aside class='right'>
