--- a/app/views/home/index.zh.html.erb
+++ b/app/views/home/index.zh.html.erb
@@ -7,15 +7,19 @@
   <section id='download'>
     <p>
       <a href='http://itunes.apple.com/us/app/isafeplayer/id471335004?ls=1&mt=8'><%= image_tag "app-store.png", :alt => "Get iSafePlayer on the AppStore", :width => 200 %></a>
-      <small>Requires iPhone, iPod 4.0 +</small>
+      <small>要求 iPhone, iPod 4.0 +</small>
     </p>
+  </section>
+
+  <section id="title">
+    <h1>“这是我用过最管用的，最实用的防盗软件。”</h1>
   </section>
 
   <section id='features'>
     <article class='clearfix' id="what">
       <section class='left'>
-        <h2>What is iSafePlayer ?</h2>
-        <p><strong>iSafePlayer</strong> is an <strong>anti-theft</strong> music player, which could play those music already in your iPhone and will alarm when your iPhone lose connection with you, like headset been removed, or bluetooth headset lost connection.</p>
+        <h2>iSafePlayer是什么东西?</h2>
+        <p><strong>iSafePlayer</strong> 是一个<b>防盗</b>音乐播放器，可以播放存放在iPod播放器里的音乐，当你的手机被小偷偷了，或者遗忘带走的时候，它就会立刻大声报警，比如当你在公交车上听音乐的时候，你或许会闭上眼镜小睡一会，小偷会乘次机会拔去耳机，拿走你心爱的iPhone，如果你用的iSafePlayer，恭喜你，它立刻会大叫“抓贼啊”，让你免除手机被盗的痛苦。</p>
       </section>
       <aside class='right'>
         <%= image_tag "cover.jpg", :width => 250 %>
@@ -25,42 +29,39 @@
 
     <article class='clearfix' id="how">
       <section class='left'>
-        <h2>How does iSafePlayer work ?</h2>
+        <h2>iSafePlayer 是怎么工作的呢 ?</h2>
         <p>
-          <h3>If You</h3>
+          <h3>如果你</h3>
           <ul>
             <li>
-              are using iSafePlayer to listen to music.
+              使用iSafePlayer听音乐。
             </li>
             <li>
-              are using wired headset or bluetooth headset.
+              使用有线或者蓝牙耳机。
             </li>
           </ul>
-          <h3>When a thief</h3>
+          <h3>当小偷</h3>
           <ul>
             <li>
-              unplugs headset.
+              拔掉耳机。
             </li>
             <li>
-              takes your iPhone out of bluetooth available range.
+              将手机拿到蓝牙耳机信号范围之外的地方（具体看蓝牙耳机的性能）。
             </li>
           </ul>
-          <h3>iSafePlayer will</h3>
+          <h3>iSafePlayer就会</h3>
           <ul>
             <li>
-              start to alarm at the maximum volume.
+              立即用最大音量报警，无论你之前设定的是什么音量。
             </li>
             <li>
-              vibrate your iPhone.
+              一直震动手机。
             </li>
             <li>
-              play your custom recorded alarm sound, which is very sensitive to you, like your name, or can threaten the thief, like "I am a thief, I am stealing iPhone".
+              如果你有录自定义铃声，它就也会最大声地朗读出来。（您可以录入一些对你或者对小偷很敏感的声音，比如你的名字，或者“我是贼，我在偷iPhone，快来抓我。”）
             </li>
             <li>
-              not be able to lower down the speaker volume.
-            </li>
-            <li>
-              not be able to kill iSafePlayer, if you've set passcode.
+              禁止音量被调低，它一直会大喊大叫。
             </li>
           </ul>
         </p>
@@ -74,36 +75,36 @@
 
     <article class='clearfix' id="why">
       <section class='left'>
-        <h2>Why iSafePlayer is the best anti-theft iPhone application ?</h2>
+        <h2>为什么 iSafePlayer 最好的防盗 iPhone 应用 ?</h2>
         <p>
-          <h3>It's practical</h3>
+          <h3>它针对了一些很典型的被盗的实际情况：</h3>
           <ul>
-            <li>Most of situations that we lost iPhone are on <strong>bus</strong>, <strong>metro</strong>, <strong>crowded street</strong> or <strong>crowded public places</strong></li>
-            <li>Most of people like listening to music with iPhone by using ipod player, when they are outside.</li>
+            <li>我们大多数人丢手机都是在 <strong>公交车</strong>, <strong>地铁</strong>, <strong>人多的街上</strong> 或者 <strong>闹市区</strong></li>
+            <li>大多数人在外面的时候都喜欢用iPhone来听音乐，而且基本上用的都是iPod播放器，虽然听音乐能够感觉出被盗，但是因为小偷离开迅速，当你感觉出来并且发现手机被偷时，小偷早已无踪影。</li>
           </ul>
 
-          <h3>It solved the disadvantages of other anti-theft applications</h3>
+          <h3>它解决了大多数其他防盗软件的重要缺点：</h3>
           <ul>
             <li>
-              <strong>You have to remember to launch it</strong>, but most of the situation, we are not careful enough, so we always forget to do it. <br/>
-              <p><strong>For iSafePlayer</strong>, you will never need to remember to open it, because you want to listen to the music, so it's an inevitable step when you go out.</p>
+              <strong>你必须每次都记得要打开这个应用，太麻烦。</strong>，但是每次丢手机就是因为我们粗心大意才导致的。<br/>
+              <p><strong>而iSafePlayer</strong>，你每次都会因为需要出门的时候打开音乐而带开它，是个肯定忘不了的步骤，所以就算粗心大意也不会不要紧。</p>
             </li>
             <li>
-              <strong>If you launched that application you couldn't do anything. </strong>
-              You can't lock the screen, you can't listen to music, you can't browse website, you can't play game. the alarm will be disabled if you launch any other application. <br/>
-              <p><strong>For iSafePlayer</strong>, allow you do anything as long as you can still hear the music from iSafePlayer, whatever you are playing game or browsing website or even locked screen.</p>
+              <strong>如果你启动了其他防盗应用，那么你的iPhone就不能做任何事情了。</strong>
+              你不能锁屏，你不能听音乐，你不能浏览网页，你不能打游戏。如果你要打开其他应用，报警软件就会被关闭。<br/>
+              <p><strong>而iSafePlayer</strong>，它是一个在后台运行的一个程序，只要你没有使用其他的播放器播放音乐，那么它将会一直守护着你的手机，与此同时您也可以玩游戏，浏览网页，看微博，发短信和锁屏。</p>
             </li>
             <li>
-              <strong>Easy to disable alarm. </strong><br/>Most of them, you can disable alarm them by press home button, or lock the screen. <br/>
-              <p><strong>For iSafePlayer</strong>, if you set passcode, the thief not only can't unlock your iPhone to kill the application but also can't lower down the alarm sound. The only way is turning off the iPhone by force, but do you think a thief can be so calm when the alarm been raised and holds the power button for seconds? before he trys, he must choose to run away.</p>
+              <strong>容易被解除警报</strong><br/>大多数应用，你只要锁屏，或者按home键就失效了，或者把声音关掉就没有了。<br/>
+              <p><strong>而iSafePlayer</strong>，只要你设置了锁屏密码，小偷是没有办法进入系统消除警报的，除非他选择关机，但是关机需要按住关机键几秒钟，并且滑动屏幕上的按钮才行。但是小偷当偷到手机后发现手机震动并且报警的时候，想必他已经没有那么冷静了，唯一想的就是立刻逃跑。</p>
             </li>
             <li>
-              There are two kinds of situations that anti-theft application are trying to handle with: <br/>
-                <strong>1. When your iPhone is being stolen.</strong><br/>
-                This kind of application will alarm when the thief touches or moves your iPhone. You can get it back very soon and are possible to get it back.<br/>
-                <strong>2. When you lost your iPhone.</strong><br/>
-                This kind of application will help you to trace your iPhone's information, but most of them are jailborken applications. It's very hard to get your iPhone back and also very complicated.<br/>
-              <p><strong>For iSafePlayer</strong>, it's the type 1, it tends to stop your iPhone being stolen as earlier as possible.</p>
+              现在市面上所有的防盗软件大部分处理了两种情况：<br/>
+                <strong>1. 当手机正在被偷的时候。</strong><br/>
+                这类应用将会在有人触碰或者移动你手机的时候报警。这种情况只要你发现了你能够立刻拿回来你的手机，起码拿回来的几率比较大。<br/>
+                <strong>2. 当手机已经被偷。</strong><br/>
+                这类应用将会帮助你跟踪你的手机当前的位置，电话号码和摄像头拍照。尽管能够获取很多信息，但是要想把手机拿回来任然是一件非常难和复杂的事情。<br/>
+              <p><strong>而iSafePlayer</strong>，它是正对第一种情况的防盗软件，尽早发现和防止手机被盗。</p>
             </li>
           </ul>
         </p>
