add alipay feature

--- a/app/views/home/index.zh.html.erb
+++ b/app/views/home/index.zh.html.erb
@@ -9,6 +9,10 @@
       <a href='http://itunes.apple.com/us/app/isafeplayer/id471335004?ls=1&mt=8'><%= image_tag "app-store.png", :alt => "Get iSafePlayer on the AppStore", :width => 200 %></a>
       <small>要求 iPhone, iPod 4.0 +</small>
     </p>
+    <p>
+      <%= link_to image_tag("alipay_button.png"), alipay_path %>
+      <small>如果您没有信用卡，可以使用支付宝支付。</small>
+    </p>
   </section>
 
   <section id="title">
@@ -120,10 +124,14 @@
   </section>
 
   <section id='footer_download'>
-    <h2>Where can I get it ?</h2>
+    <h2>哪里我能买到它呢 ?</h2>
     <p>
       <a href='http://itunes.apple.com/us/app/isafeplayer/id471335004?ls=1&mt=8'><%= image_tag "app-store.png", :width => 200 %></a>
-      <small>Requires iPhone, iPod 4.0 +</small>
+      <small>要求 iPhone, iPod 4.0 +</small>
+    </p>
+    <p>
+      <%= link_to image_tag("alipay_button.png"), alipay_path %>
+      <small>如果您没有信用卡，可以使用支付宝支付。</small>
     </p>
   </section>
 </div>
