--- a/app/views/home/index.zh.html.erb
+++ b/app/views/home/index.zh.html.erb
@@ -1,6 +1,6 @@
 <div class='container' id='application'>
   <section id="video">
-    <a href="javascript:void(0)" id="show_video"><%= image_tag "preview.jpg" %></a>
+    <a href="javascript:void(0)" id="show_video"><%= image_tag "preview_cn.jpg" %></a>
     <embed class='video_code' style='display:none' src='http://player.youku.com/player.php/sid/XMzEwNjc3NjA4/v.swf' allowFullScreen='true' quality='high' width='820' height='502' align='middle' allowScriptAccess='always' type='application/x-shockwave-flash'></embed>
   </section>
 
@@ -71,9 +71,9 @@
         </p>
       </section>
       <aside class='right'>
-        <%= image_tag "player.jpg", :width => 250 %>
+        <%= image_tag "player_cn.jpg", :width => 250 %>
         <br/>
-        <%= image_tag "tutorial-1.jpg", :width => 250 %>
+        <%= image_tag "tutorial-1_cn.jpg", :width => 250 %>
       </aside>
     </article>
 
@@ -114,11 +114,11 @@
         </p>
       </section>
       <aside class='right'>
-        <%= image_tag "tutorial-2.jpg", :width => 250 %>
+        <%= image_tag "tutorial-2_cn.jpg", :width => 250 %>
         <br/>
-        <%= image_tag "tutorial-3.jpg", :width => 250 %>
+        <%= image_tag "tutorial-3_cn.jpg", :width => 250 %>
         <br/>
-        <%= image_tag "tutorial-4.jpg", :width => 250 %>
+        <%= image_tag "tutorial-4_cn.jpg", :width => 250 %>
       </aside>
     </article>
   </section>
