change video address

--- a/app/views/home/index.zh.html.erb
+++ b/app/views/home/index.zh.html.erb
@@ -1,7 +1,7 @@
 <div class='container' id='application'>
   <section id="video">
     <a href="javascript:void(0)" id="show_video"><%= image_tag "preview_cn.jpg" %></a>
-    <embed class='video_code' style='display:none' src='http://player.youku.com/player.php/sid/XMzEwNjc3NjA4/v.swf' allowFullScreen='true' quality='high' width='820' height='502' align='middle' allowScriptAccess='always' type='application/x-shockwave-flash'></embed>
+    <embed class='video_code' style='display:none' src="http://player.youku.com/player.php/sid/XMzExODg2NDQ4/v.swf" allowFullScreen="true" quality="high" width="820" height="502" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
   </section>
 
   <section id='download'>
