--- a/app/views/home/index.en.html.erb
+++ b/app/views/home/index.en.html.erb
@@ -122,6 +122,7 @@
     </article>
   </section>
 
+<iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Fpages%2FiSafePlayer%2F173320026086889&amp;width=820&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=true&amp;header=true&amp;height=590&amp;appId=42876356856" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:820px; height:590px;" allowTransparency="true"></iframe>
   <section id='footer_download'>
     <h2>Where can I get it ?</h2>
     <p>
