--- a/app/views/alipay/error.html.erb
+++ b/app/views/alipay/error.html.erb
@@ -1,8 +1,8 @@
 <div class='container' id='alipay'>
-  <section>
+  <div>
     <h2>对不起，支付过程中发生错误，请稍候再试。</h2>
     <p>
       <%= link_to "回到首页", root_path %>
     </p>
-  </section>
+  </div>
 </div>
