--- a/app/views/alipay/pay.html.erb
+++ b/app/views/alipay/pay.html.erb
@@ -1,5 +1,5 @@
 <div class='container' id='alipay'>
-  <section>
+  <div>
     <h2 style="padding: 10px;">
       <%= image_tag "alipay_logo.gif" %>
       <p style="margin-top: 10px">正在转向支付宝，请稍候...</p>
@@ -25,7 +25,7 @@
         <% service.sign %>
       <% end %>
     </div>
-  </section>
+  </div>
 </div>
 
 <script>
