--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,8 +1,8 @@
 <div class='container' id='feedback'>
-  <section>
+  <div>
     <h2><%= t ".new_feedback_title" %></h2>
     <p class="feedback_form">
       <%= render 'form' %>
     </p>
-  </section>
+  </div>
 </div>
