--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class='clearfix'>
+<div id="footer" class='clearfix'>
   <ul class='left'>
     <li>&copy;2010 Michael He</li>
     <li>
@@ -12,4 +12,4 @@
       <%= t("twitter_html") %>
     </li>
   </ul>
-</footer>
+</div>
