--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,10 @@
-<header class='clearfix'>
+<div id="header" class='clearfix'>
   <h1 class='left'>
     <a href='/'>iSafePlayer</a>
   </h1>
-  <nav class='right'>
+  <div id="nav" class='right'>
     <ul>
       <%= raw top_menu %>
     </ul>
-  </nav>
-</header>
+  </div>
+</div>
