--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -47,11 +47,11 @@ a:hover, a:active {
 
 /* section: header
 ---------------------------------------------- */
-header {
+#header {
   margin: 0 0 50px;
 }
 
-header h1 a {
+#header h1 a {
   background: url("/assets/logo.png") no-repeat;
   display: block;
   height: 50px;
@@ -59,7 +59,7 @@ header h1 a {
   width: 250px;
 }
 
-header nav ul li {
+#header #nav ul li {
   color: #8b8b8b;
   display: inline-block;
   font-size: 14px;
@@ -68,15 +68,15 @@ header nav ul li {
   margin: 10px 30px 0 0;
 }
 
-header nav ul li.disabled {
+#header #nav ul li.disabled {
   color: #e5e5e5;
 }
 
-header nav ul li a:link, header nav ul li a:visited {
+#header #nav ul li a:link, #header #nav ul li a:visited {
   color: #2c2c2c;
 }
 
-header nav ul li a:hover, header nav ul li a:active {
+#header #nav ul li a:hover, #header #nav ul li a:active {
   color: #8b8b8b;
 }
 /* ------------------------------------------- */
@@ -91,28 +91,28 @@ header nav ul li a:hover, header nav ul li a:active {
 
 /* section: footer
 ---------------------------------------------- */
-footer {
+#footer {
   border-top: 1px solid #e5e5e5;
   padding: 10px 0 0 0;
 }
 
-footer ul li {
+#footer ul li {
   border-right: 1px solid #e5e5e5;
   display: inline-block;
   margin: 0 10px 0 0;
   padding: 0 10px 0 0;
 }
 
-footer ul li.disabled {
+#footer ul li.disabled {
   color: #e5e5e5;
 }
 
-footer ul li a:link, footer ul li a:visited {
+#footer ul li a:link, #footer ul li a:visited {
   color: #2c2c2c;
   font-weight: bold;
 }
 
-footer ul li a:hover, footer ul li a:active {
+#footer ul li a:hover, #footer ul li a:active {
   color: #8b8b8b;
 }
 /* ------------------------------------------- */
