--- a/app/views/alipay/done.html.erb
+++ b/app/views/alipay/done.html.erb
@@ -1,5 +1,5 @@
 <div class='container' id='alipay'>
-  <section>
+  <div>
     <h2>
       <% if params[:trade_status] == "TRADE_SUCCESS" %>
         恭喜您，您支付<%= @result.amount %>元已经完成，请耐心等待系统从支付宝获得最终确认信息，谢谢。
@@ -13,5 +13,5 @@
     <p>
       <%= link_to "回到首页", root_path %>
     </p>
-  </section>
+  </div>
 </div>
