--- a/app/views/alipay/index.html.erb
+++ b/app/views/alipay/index.html.erb
@@ -1,5 +1,5 @@
 <div class='container' id='alipay'>
-  <section>
+  <div>
     <h2>请填写您的AppleID ?</h2>
     <p>
       <form action='/alipay/pay'>
@@ -9,5 +9,5 @@
         <%= submit_tag "立刻购买支付20RMB", :confirm => "如果您使用的不是iPhone4将不能使用本软件，是否继续？" %>
       </form>
     </p>
-  </section>
+  </div>
 </div>
